# egui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cranky.toml  DEPENDENTS.md  LICENSE  README.md  bacon.toml  clippy.toml  deny.toml
.cargo/: config.toml
.changes/: config.json  readme.md
.github/: dependabot.yml
.github/workflows/: Rust.yml  rust.yml
crates/eframe/: CHANGELOG.md  Cargo.toml  README.md
crates/eframe/Source/: lib.rs
crates/eframe/Source/epi/: icon_data.rs  mod.rs
crates/eframe/Source/native/: app_icon.rs  epi_integration.rs  file_storage.rs  run.rs
crates/eframe/Source/web/: app_runner.rs  backend.rs  events.rs  input.rs  mod.rs  panic_handler.rs  screen_reader.rs  storage.rs  text_agent.rs  web_logger.rs  web_painter.rs  web_painter_glow.rs  web_painter_wgpu.rs  web_runner.rs
crates/egui-winit/: CHANGELOG.md  Cargo.toml  README.md
crates/egui-winit/Source/: clipboard.rs  lib.rs  window_settings.rs
crates/egui_demo_app/: Cargo.toml  README.md
crates/egui_demo_app/Source/: backend_panel.rs  frame_history.rs  lib.rs  main.rs  web.rs  wrap_app.rs
crates/egui_demo_app/Source/apps/: custom3d_glow.rs  custom3d_wgpu.rs  fractal_clock.rs  http_app.rs  mod.rs
crates/egui_glow/: CHANGELOG.md  Cargo.toml  README.md
crates/egui_glow/Source/: lib.rs  misc_util.rs  painter.rs  shader_version.rs  vao.rs  winit.rs
crates/egui_glow/examples/: pure_glow.rs
scripts/: build_demo_web.sh  cargo_deny.sh  check.sh  clippy_wasm.sh  docs.sh  find_bloat.sh  generate_changelog.py  generate_example_screenshots.sh  setup_web.sh  start_server.sh  wasm_bindgen_check.sh  wasm_size.sh
scripts/clippy_wasm/: clippy.toml
