[profile]

[profile.dev]

[profile.dev.package]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`

[workspace]
members = [
	"crates/eframe",
	"crates/egui_demo_app",
	"crates/egui_glow",
	"crates/egui-winit",
]
resolver = "2"

[workspace.dependencies]
thiserror = { version = "2.0.11" }
