[[bin]]
name = "egui_demo_app"
path = "Source/main.rs"

[dependencies]
bytemuck = { version = "1.7.1", optional = true }
chrono = { version = "0.4", default-features = false, features = [
	"js-sys",
	"wasmbind",
] }
eframe = { package = "eframe_tao", version = "0.23.0", path = "../eframe", default-features = false }
egui = { version = "0.22.0", features = ["extra_debug_asserts"] }
egui_demo_lib = { version = "0.22.0", features = ["chrono"] }
egui_extras = { version = "0.22.0", optional = true }
ehttp = { version = "0.2.0", optional = true }
image = { version = "0.24", optional = true, default-features = false, features = [
	"jpeg",
	"png",
] }
log = { version = "0.4", features = ["std"] }
poll-promise = { version = "0.2", optional = true, default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["glow", "persistence"]
glow = ["eframe/glow"]
http = ["ehttp", "image", "poll-promise", "egui_extras/image"]
persistence = ["eframe/persistence", "egui/persistence", "serde"]
serde = ["dep:serde", "egui_demo_lib/serde", "egui/serde"]
syntax_highlighting = ["egui_demo_lib/syntax_highlighting"]
web_screen_reader = ["eframe/web_screen_reader"]                  # experimental

[lib]
crate-type = ["cdylib", "rlib"]
path = "Source/lib.rs"

[package]
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
default-run = "egui_demo_app"
edition = "2021"
license-file = "LICENSE"
name = "egui_demo_app"
publish = false
rust-version = "1.65"
version = "0.22.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
all-features = true

[target]

[target.'cfg(not(target_arch = "wasm32"))']

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")']

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
